[gd_scene load_steps=9 format=3 uid="uid://dccuvvifqyple"]

[ext_resource type="Script" path="res://Environment/Gather/Stone/Stone.gd" id="1_uq421"]
[ext_resource type="Texture2D" uid="uid://b7um63emwq1d8" path="res://Environment/Gather/Mineral.png" id="2_glg4b"]
[ext_resource type="Resource" uid="uid://da7ub0jrtxhq4" path="res://Scripts/Inventory/Resources/Stone.tres" id="2_t8spd"]
[ext_resource type="Texture2D" uid="uid://bln8h2wjekdoc" path="res://Sprites/Shadow.png" id="3_wr21n"]
[ext_resource type="AudioStream" uid="uid://bp1khwmeuljw3" path="res://Sound/Stone/StoneHit0.wav" id="5_etgaf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_005vc"]
size = Vector2(290, 63.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5kvjt"]
radius = 66.0
height = 290.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5ac10"]
radius = 212.085

[node name="Stone" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_uq421")
resource = ExtResource("2_t8spd")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(5.00679e-06, -28)
scale = Vector2(6.55645, 6.55645)
texture = ExtResource("3_wr21n")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -9)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_glg4b")
offset = Vector2(2.66667, -41)
region_enabled = true
region_rect = Rect2(16, 59, 200, 96)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 267

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(5.5, -24)
shape = SubResource("RectangleShape2D_005vc")
debug_color = Color(0.768627, 0, 0.176471, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -67)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5kvjt")

[node name="Mouse_Zone" type="Area2D" parent="."]
position = Vector2(0, -67)
collision_layer = 1024
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse_Zone"]
shape = SubResource("CircleShape2D_5ac10")
debug_color = Color(0.666667, 0.352941, 0.0941176, 0.419608)

[node name="StoneAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_etgaf")
bus = &"BGS"

[connection signal="area_entered" from="Mouse_Zone" to="." method="_on_mouse_zone_area_entered"]
[connection signal="area_exited" from="Mouse_Zone" to="." method="_on_mouse_zone_area_exited"]
[connection signal="mouse_entered" from="Mouse_Zone" to="." method="_on_mouse_zone_mouse_entered"]
[connection signal="mouse_exited" from="Mouse_Zone" to="." method="_on_mouse_zone_mouse_exited"]
